Wed May 30 22:34:15 UTC 2007  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/DataReaderImpl.h:
        * dds/DCPS/DataReaderImpl.cpp:

          Made auto_return_loan() pure-virtual.

        * tests/DCPS/DCPSInfoRepo/DCPSDataReaderI.h:
        * tests/DCPS/unit/MyTypeSupportImpl.h:

          Implemented a stub auto_return_loan() method.

Wed May 30 21:47:18 UTC 2007  Adam Mitz  <mitza@ociweb.com>

        * DevGuideExamples/DDS/Messenger/Messenger.mpc:
        * performance-tests/DCPS/Sync/Sync.mpc:

          Adjusted IDL_Files and TypeSupport_Files sections so that IDL is only
          compiled by one MPC project and extraneous information in the .mpc
          files is minimized.

        * bin/dcps_ts.pl:

          Fixed a bug where if there are two or more DCPS_DATA_TYPE structs in
          one IDL file the module of the first is applied to the subsequent
          structs that are not in modules.

        * dds/DCPS/DataReaderImpl.h:
        * dds/DCPS/DataWriterImpl.h:

          Expose the Data{Reader,Writer}Remote object via friendship to a
          special "test" class.  Tests can implement this class in order to
          test the InfoRepo behavior directly.

        * tests/DCPS/Compiler/idl_test1_lib/FooDef.idl:
        * tests/DCPS/Compiler/idl_test2_lib/FooDef.idl:
        * tests/DCPS/Compiler/idl_test2_lib/idl_test2_lib.mpc:

          Added a DCPS_DATA_TYPE struct that's outside of an IDL module so we
          have test coverage for this.

        * tests/DCPS/DCPSInfoRepo/publisher.cpp:
        * tests/DCPS/DCPSInfoRepo/subscriber.cpp:

          Changes to make it work with the local interfaces and their
          consequences (DataReaderRemote is distinct from DataReaderImpl, etc).

        * tests/DCPS/FooType/FooType.idl:
        * tests/DCPS/FooType/FooType.mpc:

          Now use dcps_ts.pl to generate the Type Support and related code.

        * tests/DCPS/FooType/FooDataReaderImpl.h: