@@ -13,8 +13,7 @@
 
 //Class DataReaderListenerImpl
 class DataReaderListenerImpl
-  : public virtual POA_TAO::DCPS::DataReaderListener,
-    public virtual PortableServer::RefCountServantBase
+  : public virtual ::TAO::DCPS::LocalObject<TAO::DCPS::DataReaderListener>
 {
 public:
   //Constructor
